refactor hudson script, more generalization of in release.sh and promote.sh, put everything of common.sh nested into function
git-svn-id: https://svn.java.net/svn/glassfish~svn/trunk/main@63006 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5